--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "gymnasium[toy-text]>=1.2.0",
     "numpy>=2.3.2",
     "optuna>=4.4.0",
+    "pydantic>=2.11.7",
+    "pydantic-settings>=2.10.1",
 ]
 
 [dependency-groups]
