--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,7 @@ dependencies = [
     "numpy>=2.3.2",
     "optuna>=4.4.0",
     "pydantic>=2.11.7",
-    "pydantic-settings>=2.10.1",
 ]
 
 [dependency-groups]
-dev = [
-    "ipykernel>=6.30.0",
-]
+dev = []
